tests/baselines/reference/unusedTypeParameterInLambda3.errors.txt
unusedTypeParameterInLambda3.ts(2,12): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
unusedTypeParameterInLambda3.ts(5,15): error TS6133: 'U' is declared but its value is never read.


==== unusedTypeParameterInLambda3.ts (2 errors) ====
    class A<T> {
        public x: T;
               ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
    
    var y: new <T,U>(a:T)=>void;
                  ~
!!! error TS6133: 'U' is declared but its value is never read.
    